Remplazando tokens sensibles

--- a/Chatbot_Senior_de_los_Anillos.ipynb
+++ b/Chatbot_Senior_de_los_Anillos.ipynb
@@ -96,7 +96,7 @@
       "outputs": [],
       "source": [
         "# Cargar variables de entorno desde el archivo .env\n",
-        "os.environ['HUGGINGFACE_TOKEN'] = config('HUGGINGFACE_TOKEN', default='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')"
+        "os.environ['HUGGINGFACE_TOKEN'] = config('HUGGINGFACE_TOKEN', default='TOKEN_HUGGINGFACE')"
       ]
     },
     {
@@ -108,7 +108,7 @@
       "outputs": [],
       "source": [
         "with open('.env', 'w') as file:\n",
-        "    file.write('HUGGINGFACE_TOKEN=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')"
+        "    file.write('HUGGINGFACE_TOKEN=TOKEN_HUGGINGFACE')"
       ]
     },
     {
@@ -2146,7 +2146,7 @@
       "source": [
         "# Ejemplo)\n",
         "prompt = '¿cómo influye el Anillo Único en los personajes principales y cuáles son los desafíos específicos que enfrentan debido a su presencia en la historia?'\n",
-        "answer = choose_data_source(prompt, api_key=\"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\")\n",
+        "answer = choose_data_source(prompt, api_key=\"TOKEN_HUGGINGFACE\")\n",
         "print('\\nRESPUESTA: \\n', answer)"
       ]
     },
@@ -2380,7 +2380,7 @@
       ],
       "source": [
         "#Ejemplo\n",
-        "respuesta_final = pregunta_agent_context(prompt, contexto, api_key=\"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\")\n",
+        "respuesta_final = pregunta_agent_context(prompt, contexto, api_key=\"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "print(f'Prompt: {prompt}\\n')\n",
         "print('-----------------------------------------------------------------------')\n",
@@ -2422,7 +2422,7 @@
         "    english_prompt = translate_sentence(prompt)\n",
         "\n",
         "    # Identificar la fuente\n",
-        "    source_raw = choose_data_source(english_prompt , api_key=\"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\")\n",
+        "    source_raw = choose_data_source(english_prompt , api_key=\"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "    # Formatear respuesta del LLM para la fuente\n",
         "    source_clean = answer_cleaner(source_raw)\n",
@@ -2431,7 +2431,7 @@
         "    contexto, id_source = devolver_contexto(source_clean, prompt)\n",
         "\n",
         "    # Obtener la respuesta con el prompt original más el contexto obtenido de las fuentes externas\n",
-        "    respuesta_final = pregunta_agent_context(prompt, contexto, api_key=\"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\")\n",
+        "    respuesta_final = pregunta_agent_context(prompt, contexto, api_key=\"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "    # Traducir la respuesta al Español\n",
         "    respuesta_final_español = translate_sentence_to_spanish(respuesta_final)\n",
@@ -2491,7 +2491,7 @@
         "prompt = 'Personaje: Bilbo Bolsón quien fue y que hizo'\n",
         "\n",
         "# Llamar a la función del RAG\n",
-        "respuesta, fuente, contexto = RAG(prompt, \"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\")\n",
+        "respuesta, fuente, contexto = RAG(prompt, \"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "# Imprimir el resultado\n",
         "print('------------------------------------------------------------------------')\n",
@@ -2547,7 +2547,7 @@
         "prompt = 'Peliculas: Cual fue la duracion del Señor de los Anillos: La Comunidad del Anillo'\n",
         "\n",
         "# Llamar a la función del RAG\n",
-        "respuesta, fuente, contexto = RAG(prompt, \"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\")\n",
+        "respuesta, fuente, contexto = RAG(prompt, \"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "# Imprimir el resultado\n",
         "print('------------------------------------------------------------------------')\n",
@@ -2603,7 +2603,7 @@
         "prompt = 'Libros: ¿¿Cuál es el papel clave que desempeña el personaje de Aragorn en la batalla final y el desenlace de la historia en \"El retorno del rey\"?'\n",
         "\n",
         "# Llamar a la función del RAG\n",
-        "respuesta, fuente, contexto = RAG(prompt, \"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\")\n",
+        "respuesta, fuente, contexto = RAG(prompt, \"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "# Imprimir el resultado\n",
         "print('------------------------------------------------------------------------')\n",
@@ -2637,7 +2637,7 @@
         "prompt = input(\"Prompt: \")\n",
         "\n",
         "# Llamar a la función del RAG\n",
-        "respuesta, fuente, contexto = RAG(prompt, \"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\")\n",
+        "respuesta, fuente, contexto = RAG(prompt, \"TOKEN_HUGGINGFACE\")\n",
         "\n",
         "# Imprimir el resultado\n",
         "print('------------------------------------------------------------------------')\n",
